--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,7 @@ def enableSeparateBuildPerCPUArchitecture = true
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = true
+def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
@@ -48,6 +48,20 @@ android {
         versionName packageJson.version
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file('ECDRN.keystore')
+            storePassword 'shantaram'
+            keyAlias 'ECDRN_RELEASE'
+            keyPassword 'shantaram'
+        }
+        debug {
+            storeFile file('ECDRN.keystore')
+            storePassword 'shantaram'
+            keyAlias 'ECDRN_RELEASE'
+            keyPassword 'shantaram'
         }
     }
     splits {
@@ -65,6 +79,8 @@ android {
             debuggable false
             jniDebuggable false
             renderscriptDebuggable false
+            zipAlignEnabled true
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
