--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+
+# app keystores (will get removed on ci server)
+!*.keystore
+
+# vscode
+.vscode/
+
+# runtime configuration
+cfg/runtime.json
+
 # OSX
 #
 .DS_Store
@@ -39,7 +49,6 @@ npm-debug.log
 buck-out/
 \.buckd/
 android/app/libs
-*.keystore
 
 # fastlane
 #
@@ -51,3 +60,19 @@ android/app/libs
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+### Gradle ###
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
