move binaries, add keystore, add cfg files for runtime cfg

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+LIFEKEY_DEV_RELEASE_STORE_FILE=dev-release-key.keystore
+LIFEKEY_DEV_RELEASE_KEY_ALIAS=dev-release-key
+LIFEKEY_DEV_RELEASE_STORE_PASSWORD=dev-release-key
+LIFEKEY_DEV_RELEASE_KEY_PASSWORD=dev-release-key
