--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -34,7 +34,7 @@ def enableSeparateBuildPerCPUArchitecture = true
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion 23
@@ -52,16 +52,10 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file('ECDRN.keystore')
-            storePassword 'shantaram'
-            keyAlias 'ECDRN_RELEASE'
-            keyPassword 'shantaram'
-        }
-        debug {
-            storeFile file('ECDRN.keystore')
-            storePassword 'shantaram'
-            keyAlias 'ECDRN_RELEASE'
-            keyPassword 'shantaram'
+            storeFile file('../keystores/' + LIFEKEY_DEV_RELEASE_STORE_FILE)
+            storePassword LIFEKEY_DEV_RELEASE_STORE_PASSWORD
+            keyAlias LIFEKEY_DEV_RELEASE_KEY_ALIAS
+            keyPassword LIFEKEY_DEV_RELEASE_KEY_PASSWORD
         }
     }
     splits {
