--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,7 @@ println "Building Lifekeyrn v"+packageJson.version
 
 apply plugin: "com.android.application"
 
+
 import com.android.build.OutputFile
 
 // react
@@ -93,12 +94,19 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-dialogs')
     compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
     compile project(':react-native-google-analytics-bridge')
+
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
+    compile 'com.google.android.gms:play-services-auth:10.2.0'
+
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
     compile "com.facebook.react:react-native:+"  // From node_modules
+
 }
 
 // Run this once to be able to run the application with BUCK
@@ -107,3 +115,10 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+
+repositories {
+    maven { url "https://jitpack.io" }
+
+}
+apply plugin: 'com.google.gms.google-services'
