--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "^0.40.0",
     "react-native-android-back-button": "^0.3.0",
     "react-native-camera": "^0.5.1",
+    "react-native-dialogs": "0.0.19",
     "react-native-google-analytics-bridge": "^5.0.0",
     "react-native-vector-icons": "^4.0.0",
     "tcomb-form-native": "^0.6.4"
