--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,9 +101,9 @@ dependencies {
 
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
-    compile 'com.google.android.gms:play-services-auth:10.2.0'
+    // compile 'com.google.android.gms:play-services-auth:10.2.0'
 
-    compile 'com.google.firebase:firebase-core:10.2.0'
+    // compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-messaging:10.2.0'
     compile "com.facebook.react:react-native:+"  // From node_modules
 
