began work on sending events to JS

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,11 +42,10 @@
         "no-new": "error",
         "no-redeclare": "error",
         "no-useless-return": "error",
-        "no-var": "error",
+        "no-var": "warn",
         "no-multi-spaces":"warn",
         "no-unreachable": "error",
         "no-alert":"warn",
-        "camelcase":"warn",
         "no-multiple-empty-lines": "warn",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
