--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
     package="com.lifekeyrn"
     android:versionCode="1"
     android:versionName="1.0">
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
@@ -16,6 +15,8 @@
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
+      <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
