--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-camera": "^0.5.1",
     "react-native-dialogs": "0.0.19",
     "react-native-google-analytics-bridge": "^5.0.0",
+    "react-native-qrcode": "^0.2.3",
     "react-native-vector-icons": "^4.0.0",
     "tcomb-form-native": "^0.6.4"
   },
