added eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,7 +61,8 @@
         "space-in-parens": ["warn", "never"],
         "array-bracket-spacing": "error",
         "object-curly-spacing": ["warn", "always"],
-        "no-console": "warn"
+        "no-console": "warn",
+        "prefer-arrow-callback": "warn"
 
     }
 }
