--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,6 @@
         "no-multi-spaces":"warn",
         "no-unreachable": "error",
         "no-alert":"warn",
-        "no-multiple-empty-lines": "warn",
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
         "react/prefer-es6-class": "error",
@@ -57,12 +56,47 @@
         "react/jsx-wrap-multilines": "error",
         // "react/jsx-pascal-case": 2,
         "valid-jsdoc": "warn",
-        "eol-last": "error",
+        "eol-last": "warn",
         "space-in-parens": ["warn", "never"],
         "array-bracket-spacing": "error",
         "object-curly-spacing": ["warn", "always"],
         "no-console": "warn",
-        "prefer-arrow-callback": "warn"
+        "prefer-arrow-callback": "warn",
+        "dot-location": ["warn", "property"],
+        "no-extra-bind": "warn",
+        "no-implied-eval": "error",
+        "no-lone-blocks": "warn",
+        "no-magic-numbers": "warn",
+        "no-octal-escape": "error",
+        "no-octal": "error",
+        "no-return-assign": "warn",
+        "no-useless-call": "warn",
+        "no-warning-comments": ["warn", { "terms": ["todo", "fixme"], "location": "start" }],
+        "camelcase": "warn",
+        "computed-property-spacing": ["warn", "never"],
+        "func-call-spacing": ["warn", "never"],
+        "id-length": [ "warn", { "min": 3}],
+        "key-spacing": ["warn", {
+            "afterColon": true,
+            "beforeColon": false
+        }],
+        "linebreak-style": ["error", "unix"],
+        "max-len": ["warn", {
+            "ignoreComments": true,
+            "ignoreStrings": true
+        }],
+        "newline-per-chained-call": ["warn", {
+            "ignoreChainWithDepth": 2
+        }],
+        "no-multi-assign": "warn",
+        "no-tabs": "warn",
+        "no-trailing-spaces": "warn",
+        "object-curly-newline": ["warn", { "multiline": true }],
+        "one-var-declaration-per-line": "warn",
+        "padded-blocks": ["warn", { "classes": "always" }],
+        "quote-props": ["warn", "as-needed"],
+        "quotes": ["warn", "single"],
+        "yoda": ["warn", "never", { "exceptRange": true }]
 
     }
 }
