--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,7 +66,6 @@
         "no-extra-bind": "warn",
         "no-implied-eval": "error",
         "no-lone-blocks": "warn",
-        "no-magic-numbers": "warn",
         "no-octal-escape": "error",
         "no-octal": "error",
         "no-return-assign": "warn",
@@ -75,7 +74,6 @@
         "camelcase": "warn",
         "computed-property-spacing": ["warn", "never"],
         "func-call-spacing": ["warn", "never"],
-        "id-length": [ "warn", { "min": 3}],
         "key-spacing": ["warn", {
             "afterColon": true,
             "beforeColon": false
@@ -83,7 +81,8 @@
         "linebreak-style": ["error", "unix"],
         "max-len": ["warn", {
             "ignoreComments": true,
-            "ignoreStrings": true
+            "ignoreStrings": true,
+            "ignoreTemplateLiterals": true
         }],
         "newline-per-chained-call": ["warn", {
             "ignoreChainWithDepth": 2
@@ -93,7 +92,6 @@
         "no-trailing-spaces": "warn",
         "object-curly-newline": ["warn", { "multiline": true }],
         "one-var-declaration-per-line": "warn",
-        "padded-blocks": ["warn", { "classes": "always" }],
         "quote-props": ["warn", "as-needed"],
         "quotes": ["warn", "single"],
         "yoda": ["warn", "never", { "exceptRange": true }]
