--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ansi-styles": "^2.2.1",
     "fbjs": "^0.8.8",
+    "global": "^4.3.1",
     "moment": "^2.17.1",
     "nachos-ui": "^0.1.0",
     "native-base": "^0.5.22",
@@ -20,6 +21,7 @@
     "react-native": "^0.40.0",
     "react-native-android-back-button": "^0.3.0",
     "react-native-camera": "^0.5.1",
+    "react-native-cli": "^2.0.1",
     "react-native-dialogs": "0.0.19",
     "react-native-google-analytics-bridge": "^5.0.0",
     "react-native-qrcode": "^0.2.3",
