added registration scene

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,6 +80,7 @@
         }],
         "linebreak-style": ["error", "unix"],
         "max-len": ["warn", {
+            "code": 100,
             "ignoreComments": true,
             "ignoreStrings": true,
             "ignoreTemplateLiterals": true
