--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "precommit": "node node_modules/eslint/bin/eslint.js eslint",
     "set_cfg": "./bin/set_cfg",
     "uninstall-apk": "for d in $(adb devices -l | sed '1d' | sed '$d' |  awk '{print $1}'); do adb -s $d uninstall com.lifekeyrn; done",
-    "clear_packager_cache": "rm -rf $TMPDIR/react-native-packager-cache-*; rm -rf $TMPDIR/haste-map-react-native-packager-*"
+    "clear_packager_cache": "rm -rf $TMPDIR/react-native-packager-cache-*; rm -rf $TMPDIR/haste-map-react-native-packager-*",
+    "build_rn_android_docs": "./bin/build_rn_android_docs"
   },
   "dependencies": {
     "ansi-styles": "^2.2.1",
