--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "react-test-renderer": "^15.4.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|react-clone-referenced-element|tcomb-form-native)"
+    ]
   }
 }
