--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -88,7 +88,7 @@
         "newline-per-chained-call": ["warn", {
             "ignoreChainWithDepth": 2
         }],
-        "no-multi-assign": "warn",
+        // "no-multi-assign": "warn",
         "no-tabs": "warn",
         "no-trailing-spaces": "warn",
         "one-var-declaration-per-line": "warn",
