--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,9 +102,9 @@ dependencies {
 
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.2"
-    // compile 'com.google.android.gms:play-services-auth:10.2.0'
+    compile 'com.google.android.gms:play-services-auth:10.2.1'
 
-    // compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.google.firebase:firebase-messaging:10.2.1'
     compile "com.facebook.react:react-native:+"  // From node_modules
 
@@ -120,6 +120,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 repositories {
     maven { url "https://jitpack.io" }
-
 }
+
 apply plugin: 'com.google.gms.google-services'
