--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "set_cfg": "./bin/set_cfg",
     "uninstall-apk": "for d in $(adb devices -l | sed '1d' | sed '$d' |  awk '{print $1}'); do adb -s $d uninstall com.lifekeyrn; done",
     "clear_packager_cache": "rm -rf $TMPDIR/react-native-packager-cache-*; rm -rf $TMPDIR/haste-map-react-native-packager-*",
-    "build_rn_android_docs": "./bin/build_rn_android_docs"
+    "build_rn_android_docs": "./bin/build_rn_android_docs",
+    "log_android_clean": "./bin/log_android_clean"
   },
   "dependencies": {
     "ansi-styles": "^2.2.1",
+    "deepmerge": "^1.3.2",
     "fbjs": "^0.8.8",
     "global": "^4.3.1",
     "moment": "^2.17.1",
