--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "unmockedModulePathPatterns": [
+      "<rootdir>/node_modules/react-native"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!react-native|react-clone-referenced-element|tcomb-form-native)"
     ]
