--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,9 @@
         "Promise": false,
         "fetch": false,
         "FormData": false,
-        "Header": false
+        "Header": false,
+        "shallow": false,
+        "test": false
     },
     "rules": {
         "strict": "error",
@@ -53,7 +55,7 @@
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
         "react/prefer-es6-class": "error",
-        "react/require-render-return": "warn",
+        "react/require-render-return": "off",
         "react/jsx-wrap-multilines": "error",
         "valid-jsdoc": "warn",
         "eol-last": "warn",
