--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "global": "^4.3.1",
     "moment": "^2.17.1",
     "nachos-ui": "^0.1.0",
-    "native-base": "^0.5.22",
+    "native-base": "~2.0.0",
     "react": "^15.4.2",
     "react-native": "^0.42.0",
     "react-native-android-back-button": "^0.3.0",
