--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-cli": "^2.0.1",
     "react-native-dialogs": "0.0.19",
     "react-native-google-analytics-bridge": "^5.0.0",
+    "react-native-modal-picker": "^0.0.16",
     "react-native-qrcode": "^0.2.3",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
