--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nachos-ui": "^0.1.0",
     "native-base": "~2.0.0",
     "react": "^15.4.2",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-native": "^0.42.0",
     "react-native-android-back-button": "^0.3.0",
     "react-native-camera": "^0.6.0",
