--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,14 +99,10 @@ dependencies {
     compile project(':react-native-dialogs')
     compile project(':react-native-camera')
     compile project(':react-native-vector-icons')
-    compile project(':react-native-google-analytics-bridge')
+    // compile project(':react-native-google-analytics-bridge')
 
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.2"
-    compile 'com.google.android.gms:play-services-auth:10.2.1'
-
-    compile 'com.google.firebase:firebase-core:10.2.1'
-    compile 'com.google.firebase:firebase-messaging:10.2.1'
     compile "com.facebook.react:react-native:+"  // From node_modules
 
 }
@@ -117,7 +113,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
-
 
 repositories {
     maven { url "https://jitpack.io" }
