--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "tcomb-form-native": "^0.6.4"
   },
   "devDependencies": {
+     "babel-cli": "^6.3.17",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^17.0.2",
     "babel-polyfill": "^6.16.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react-native": "^1.9.0",
     "enzyme": "^2.8.0",
     "enzyme-to-json": "^1.5.0",
@@ -56,8 +58,8 @@
       "<rootdir>/node_modules/react-native"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!react-native|react-clone-referenced-element|tcomb-form-native)"
-    ],
+  "node_modules/(?!react-native|lifekey-rn|react-native-button)/"
+],
     "setupFiles": [
       "./jestconfig.js"
     ],
