--- a/ios/Lifekeyrn/Info.plist
+++ b/ios/Lifekeyrn/Info.plist
@@ -58,6 +58,11 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+      <key>staging.api.lifekey.cnsnt.io</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 		</dict>
 	</dict>
 	<key>UIAppFonts</key>
