--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
     "uninstall-apk": "for d in $(adb devices -l | sed '1d' | sed '$d' |  awk '{print $1}'); do adb -s $d uninstall com.lifekeyrn; done",
     "clear_packager_cache": "rm -rf $TMPDIR/react-native-packager-cache-*; rm -rf $TMPDIR/haste-map-react-native-packager-*",
     "build_rn_android_docs": "./bin/build_rn_android_docs",
-    "log_android_clean": "./bin/log_android_clean"
+    "log_android_clean": "./bin/log_android_clean",
+    "shake_android_all": "./bin/shake_android_all"
   },
   "dependencies": {
     "ansi-styles": "^2.2.1",
     "deepmerge": "^1.3.2",
     "fbjs": "^0.8.8",
     "global": "^4.3.1",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "nachos-ui": "^0.1.0",
     "native-base": "~2.0.0",
     "prop-types": "^15.5.8",
-    "react": "^15.4.2",
+    "react": "^15.5.0",
     "react-native": "^0.42.0",
     "react-native-android-back-button": "^0.3.0",
     "react-native-camera": "^0.6.0",
