--- a/package.json
+++ b/package.json
@@ -28,18 +28,18 @@
     "react-native-android-back-button": "^0.3.0",
     "react-native-camera": "^0.6.0",
     "react-native-cli": "^2.0.1",
-    "react-native-datepicker": "^1.4.6",
+    "react-native-datepicker": "^1.4.7",
     "react-native-dialogs": "0.0.19",
     "react-native-google-analytics-bridge": "^5.0.0",
     "react-native-image-picker": "^0.26.3",
-    "react-native-modal-picker": "^0.0.16",
+    "react-native-modal-picker": "0.0.16",
     "react-native-qrcode": "^0.2.3",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
     "tcomb-form-native": "^0.6.4"
   },
   "devDependencies": {
-     "babel-cli": "^6.3.17",
+    "babel-cli": "^6.3.17",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^17.0.2",
     "babel-polyfill": "^6.16.0",
@@ -62,8 +62,8 @@
       "<rootdir>/node_modules/react-native"
     ],
     "transformIgnorePatterns": [
-  "node_modules/(?!react-native|lifekey-rn|react-native-button)/"
-],
+      "node_modules/(?!react-native|lifekey-rn|react-native-button)/"
+    ],
     "setupFiles": [
       "./jestconfig.js"
     ],
