renamed, added to npm

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clear_packager_cache": "rm -rf $TMPDIR/react-native-packager-cache-*; rm -rf $TMPDIR/haste-map-react-native-packager-*",
     "build_rn_android_docs": "./bin/build_rn_android_docs",
     "log_android_clean": "./bin/log_android_clean",
-    "shake_android_all": "./bin/shake_android_all"
+    "shake_android_all": "./bin/shake_android_all",
+    "reinstall_complete": "./bin/reinstall_complete"
   },
   "dependencies": {
     "ansi-styles": "^2.2.1",
