--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-native-image-picker": "^0.26.3",
     "react-native-modal-picker": "0.0.16",
     "react-native-qrcode": "^0.2.3",
-    "react-native-svg": "^5.1.5",
+    "react-native-svg": "5.1.7",
     "react-native-vector-icons": "^4.0.0",
     "tcomb-form-native": "^0.6.4"
   },
