--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -18,6 +18,8 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 // include ':react-native-google-analytics-bridge'
 // project(':react-native-google-analytics-bridge').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-analytics-bridge/android')
 
+include ':react-native-geocoder', ':app'
+project(':react-native-geocoder').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-geocoder/android') // https://github.com/devfd/react-native-geocoder
 
 include ':react-native-dialogs'
 project(':react-native-dialogs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-dialogs/android')
