--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':react-native-maps')
 
 }
 
