--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
   <application android:name=".MainApplication"
                android:allowBackup="true"
                android:label="@string/app_name"
-               android:icon="@mipmap/ic_launcher"
+               android:icon="@mipmap/lifekey_launcher"
                android:theme="@style/AppTheme"
                android:launchMode="singleTask">
     <meta-data android:name="com.google.android.gms.version"
@@ -38,5 +38,9 @@
         <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
       </intent-filter>
     </service>
+    <!-- You will only need to add this meta-data tag, but make sure it's a child of application -->
+    <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyB0G4YW_Q6nIlX7NlzJ8Pz2tyrMCHe3ocs"/>
   </application>
 </manifest>
