--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -21,4 +21,7 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 include ':react-native-dialogs'
 project(':react-native-dialogs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-dialogs/android')
 
+include ':react-native-maps'
+project(':react-native-maps').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-maps/lib/android')
+
 include ':app'
