--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-gesture-view": "^0.1.2",
     "react-native-google-analytics-bridge": "^5.0.0",
     "react-native-image-picker": "^0.26.3",
+    "react-native-maps": "^0.15.0",
     "react-native-modal-picker": "0.0.16",
     "react-native-qrcode": "^0.2.3",
     "react-native-svg": "5.1.7",
