--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,19 +94,34 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-firebase')
-    compile project(':react-native-image-picker')
-    compile project(':react-native-svg')
-    compile project(':react-native-dialogs')
-    compile project(':react-native-camera')
-    compile project(':react-native-vector-icons')
+
+    // exclude group: "com.google.android.gms"
+    compile (project(':react-native-maps')) {
+      exclude group: "com.google.android.gms"
+    }
+    compile (project(':react-native-firebase')) {
+      exclude group: "com.google.android.gms"
+    }
+    compile (project(':react-native-image-picker')) {
+      exclude group: "com.google.android.gms"
+    }
+    compile (project(':react-native-svg')) {
+      exclude group: "com.google.android.gms"
+    }
+    compile (project(':react-native-dialogs')) {
+      exclude group: "com.google.android.gms"
+    }
+    compile (project(':react-native-camera')) {
+      exclude group: "com.google.android.gms"
+    }
+    compile (project(':react-native-vector-icons')) {
+      exclude group: "com.google.android.gms"
+    }
     // compile project(':react-native-google-analytics-bridge')
 
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(':react-native-maps')
-
 }
 
 // Run this once to be able to run the application with BUCK
