adds shrink resources

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,6 +70,7 @@ android {
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
+            shrinkResources enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             debuggable false
             jniDebuggable false
