add and link dep

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,7 +94,7 @@ android {
 }
 
 dependencies {
-
+    compile project(':react-native-fingerprint-android')
     compile project(':react-native-firebase')
     compile project(':react-native-image-picker')
     compile project(':react-native-svg')
