--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,8 @@
 rootProject.name = 'Lifekeyrn'
 
+include ':react-native-fingerprint-android'
+project(':react-native-fingerprint-android').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-fingerprint-android/android')
+
 include ':react-native-firebase'
 project(':react-native-firebase').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-firebase/android')
 
