--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-cli": "^2.0.1",
     "react-native-datepicker": "^1.4.7",
     "react-native-dialogs": "0.0.19",
-    "react-native-fingerprint-android": "^0.1.4",
+    "react-native-fingerprint-android": "git@github.com:io-digital/react-native-fingerprint-android.git#c01272bd73e780472d127378e4526982763ffe49",
     "react-native-firebase": "^1.0.0-alpha12",
     "react-native-geocoder": "^0.4.8",
     "react-native-gesture-view": "^0.1.2",
