remove some old files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# testing
+coverage/
+
 # oppressive gradle rules
 gradlew
 gradlew.bat
@@ -84,4 +87,3 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 javac-services*
 rn-android-docs
-coverage/*
