initial ios build commit

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,7 +11,7 @@ import com.android.build.OutputFile
 // react
 project.ext.react = [
     bundleAssetName: "index.android.bundle",
-    entryFile: "index.android.js",
+    entryFile: "index.js",
     bundleInRelease: true,
     jsBundleDirRelease: "$buildDir/intermediates/assets/release",
     resourcesDirRelease: "$buildDir/intermediates/res/merged/release"
