--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-datepicker": "^1.4.7",
     "react-native-dialogs": "0.0.19",
     "react-native-fingerprint-android": "git@github.com:io-digital/react-native-fingerprint-android.git#c01272bd73e780472d127378e4526982763ffe49",
+    "react-native-crypto-module": "git@github.com:zkrige/rn-crypto.git",
+    "react-native-fingerprint-scanner": "^2.3.2",
     "react-native-firebase": "^1.0.0-alpha12",
     "react-native-geocoder": "^0.4.8",
     "react-native-gesture-view": "^0.1.2",
@@ -41,6 +43,7 @@
     "react-native-modal-dropdown": "^0.4.2",
     "react-native-modal-picker": "0.0.16",
     "react-native-qrcode": "^0.2.3",
+    "react-native-safe-area-view": "0.3.0",
     "react-native-svg": "5.1.7",
     "react-native-vector-icons": "^4.0.0",
     "tcomb-form-native": "^0.6.4"
