--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,17 @@
-platform :ios, '8.0'
-use_frameworks!
-
 target 'Lifekeyrn' do
-  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
+  # use_frameworks!
+  # Pods for 'Lifekeyrn'
 end
+
+# RNFirebase
+pod 'Firebase/Auth'
+pod 'Firebase/Analytics'
+pod 'Firebase/AppIndexing'
+pod 'Firebase/Core'
+pod 'Firebase/Crash'
+pod 'Firebase/Database'
+pod 'Firebase/DynamicLinks'
+pod 'Firebase/Messaging'
+pod 'Firebase/RemoteConfig'
+pod 'Firebase/Storage'
