--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "react-native-android-back-button": "^0.3.0",
     "react-native-camera": "^0.6.0",
     "react-native-cli": "^2.0.1",
+    "react-native-crypto-module": "https://github.com/zkrige/rn-crypto.git",
     "react-native-datepicker": "^1.4.7",
     "react-native-dialogs": "0.0.19",
     "react-native-fingerprint-android": "git@github.com:io-digital/react-native-fingerprint-android.git#c01272bd73e780472d127378e4526982763ffe49",
-    "react-native-crypto-module": "git@github.com:zkrige/rn-crypto.git",
     "react-native-fingerprint-scanner": "^2.3.2",
     "react-native-firebase": "^1.0.0-alpha12",
     "react-native-geocoder": "^0.4.8",
