--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,17 +1,21 @@
 target 'Lifekeyrn' do
-  # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
-  # use_frameworks!
-  # Pods for 'Lifekeyrn'
+    # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
+    platform :ios, '9.0'
+    use_frameworks!
+    inhibit_all_warnings!
+
+    pod 'Firebase/Auth'
+    pod 'Firebase/Analytics'
+    pod 'Firebase/AppIndexing'
+    pod 'Firebase/Core'
+    pod 'Firebase/Crash'
+    pod 'Firebase/Database'
+    pod 'Firebase/DynamicLinks'
+    pod 'Firebase/Messaging'
+    pod 'Firebase/RemoteConfig'
+    pod 'Firebase/Storage'
+    pod 'Fabric', '~> 1.7.5'
+    pod 'Crashlytics', '~> 3.10.1'
 end
 
-# RNFirebase
-pod 'Firebase/Auth'
-pod 'Firebase/Analytics'
-pod 'Firebase/AppIndexing'
-pod 'Firebase/Core'
-pod 'Firebase/Crash'
-pod 'Firebase/Database'
-pod 'Firebase/DynamicLinks'
-pod 'Firebase/Messaging'
-pod 'Firebase/RemoteConfig'
-pod 'Firebase/Storage'
+
