--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-gesture-view": "^0.1.2",
     "react-native-google-analytics-bridge": "^5.0.0",
     "react-native-image-picker": "^0.26.3",
+    "react-native-keyboard-aware-scroll-view": "0.2.0",
     "react-native-modal-dropdown": "^0.4.2",
     "react-native-modal-picker": "0.0.16",
     "react-native-qrcode": "^0.2.3",
