fix: clear keys on registration add: npm command to run adb add: prov profile

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "log_android_clean": "./bin/log_android_clean",
     "shake_android_all": "./bin/shake_android_all",
     "reinstall_complete": "./bin/reinstall_complete",
+    "android-dev": "adb reverse tcp:8081 tcp:8081",
     "build:ios": "react-native bundle --entry-file index.ios.js --platform ios --dev false --bundle-output ios/main.jsbundle --assets-dest ios"
   },
   "dependencies": {
