--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,6 +68,12 @@ android {
         }
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+            debuggable true
+            jniDebuggable true
+            renderscriptDebuggable true
+        }
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
@@ -78,6 +84,7 @@ android {
             signingConfig signingConfigs.release
         }
     }
+    /*
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
@@ -91,6 +98,7 @@ android {
             }
         }
     }
+    */
 }
 
 dependencies {
