--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,7 @@ def packageJson = packageSlurper.parse file('../../package.json')
 println "Building Lifekeyrn v"+packageJson.version
 
 apply plugin: "com.android.application"
+apply plugin: 'io.fabric'
 
 
 import com.android.build.OutputFile
@@ -117,6 +118,8 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.2"
     compile "com.facebook.react:react-native:+"  // From node_modules
+
+    compile 'com.crashlytics.sdk.android:crashlytics:2.9.1'
 }
 
 // Run this once to be able to run the application with BUCK
