fix: upgrade android to latest buildtools, gradle

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,8 +9,8 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:3.1.1'
         classpath 'io.fabric.tools:gradle:1.25.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,5 +29,31 @@ allprojects {
             url 'https://maven.google.com/'
         }
         google()
+    }
+}
+
+ext {
+    compileSdkVersion = 26
+    buildToolsVersion = '27.0.3'
+    supportlib_version = '27.1.1'
+}
+
+subprojects { subproject ->
+    afterEvaluate{
+        if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+            android {
+                compileSdkVersion rootProject.ext.compileSdkVersion
+                buildToolsVersion rootProject.ext.buildToolsVersion
+            }
+        }
+    }
+    // See https://stackoverflow.com/a/42718231/82609
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex')) {
+                details.useVersion "$supportlib_version"
+            }
+        }
     }
 }
