--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,7 +31,7 @@ apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = true
+def enableSeparateBuildPerCPUArchitecture = false
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -39,18 +39,20 @@ def enableSeparateBuildPerCPUArchitecture = true
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.lifekeyrn"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 27
         versionCode 1
         versionName packageJson.version
+
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters "x86","armeabi-v7a"
         }
+
     }
     signingConfigs {
         release {
@@ -62,10 +64,10 @@ android {
     }
     splits {
         abi {
-            reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86"
+            reset()
+            universalApk true  // If true, also generate a universal APK
+            include "x86","armeabi-v7a"
         }
     }
     buildTypes {
@@ -116,7 +118,7 @@ dependencies {
     compile 'com.facebook.fresco:animated-gif:1.1.0'
 
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.2"
+    compile "com.android.support:appcompat-v7:27.1.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 
     compile 'com.crashlytics.sdk.android:crashlytics:2.9.1'
