--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,10 +5,10 @@ target 'Lifekeyrn' do
 
     pod 'Firebase/Auth'
     pod 'Firebase/Analytics'
-    pod 'Firebase/Core'
+    pod 'Firebase/Core', '~> 4.13.0'
     pod 'Firebase/Database'
     pod 'Firebase/DynamicLinks'
-    pod 'Firebase/Messaging'
+    pod 'Firebase/Messaging', '~> 4.13.0'
     pod 'Firebase/RemoteConfig'
     pod 'Firebase/Storage'
     pod 'Fabric'
