--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,6 +26,7 @@ apply from: "../../node_modules/react-native/react.gradle"
 
 // react-native-vector-icons
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -109,6 +110,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-code-push')
     compile project(':react-native-geocoder')
     compile project(':react-native-fingerprint-scanner')
     compile project(':react-native-crypto-module')
