--- a/ios/Lifekeyrn/Info.plist
+++ b/ios/Lifekeyrn/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>19</string>
 	<key>CodePushPublicKey</key>
-	<string>CodePush_Public_Key</string>
+	<string>ZJVxt0fiP-OWjJ6mLwIZgQ4T4ZKLr16mf-vAM</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
