--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,30 +110,39 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-camera')
-    compile project(':react-native-code-push')
-    compile project(':react-native-geocoder')
-    compile project(':react-native-fingerprint-scanner')
-    compile project(':react-native-crypto-module')
-    compile project(':react-native-fingerprint-android')
-    //compile project(':react-native-firebase')
+    implementation project(':react-native-camera')
+    implementation project(':react-native-code-push')
+    implementation project(':react-native-geocoder')
+    implementation project(':react-native-fingerprint-scanner')
+    implementation project(':react-native-crypto-module')
+    implementation project(':react-native-fingerprint-android')
+    implementation project(':react-native-firebase')
+    /*
     compile(project(':react-native-firebase')) {
         transitive = false
     }
-    compile project(':react-native-svg')
-    compile project(':react-native-dialogs')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-image-picker')
+    */
+    implementation project(':react-native-svg')
+    implementation project(':react-native-dialogs')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-image-picker')
 
-    compile 'com.facebook.fresco:animated-base-support:1.3.0'
-    compile 'com.facebook.fresco:animated-gif:1.3.0'
+    implementation 'com.facebook.fresco:animated-base-support:1.3.0'
+    implementation 'com.facebook.fresco:animated-gif:1.3.0'
 
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:27.1.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.facebook.react:react-native:+"  // From node_modules
 
-    compile 'com.crashlytics.sdk.android:crashlytics:2.9.3'
-    compile 'com.android.support:multidex:1.0.3'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    implementation 'com.android.support:multidex:1.0.3'
+
+    implementation "com.google.android.gms:play-services-base:15.0.1"
+    implementation "com.google.firebase:firebase-core:16.0.0"
+    implementation "com.google.firebase:firebase-messaging:17.0.0"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar' // <-- Add this line if you wish to use badge on Android
+
+
 }
 
 // Run this once to be able to run the application with BUCK
