fix: remove values folder from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-
 # asset pipeline
-
-android/app/src/main/res/values/
+#android/app/src/main/res/values/
 android/app/src/main/res/drawable-*/
-
 
 # testing
 coverage/
