--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -29,4 +29,7 @@ project(':react-native-vector-icons').projectDir = new File(rootProject.projectD
 include ':react-native-dialogs'
 project(':react-native-dialogs').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-dialogs/android')
 
+include ':react-native-linear-gradient'
+project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
+
 include ':app'
